--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.profiles.active=dev
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Employee_PayRoll?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Lambop@12345
+
+environment=COMMON
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${URL}/Address_Book?createDatabaseIfNotExist=true
+spring.datasource.username=${UserName}
+spring.datasource.password=${Password}
