--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 
 
 environment=COMMON
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=${URL}/Address_Book?createDatabaseIfNotExist=true
 spring.datasource.username=${UserName}
 spring.datasource.password=${Password}
