--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,21 @@ spring.profiles.active=dev
 
 
 environment=COMMON
-spring.jpa.hibernate.ddl-auto=update
+
+###### MySQL DB Properties ######
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=${URL}/Address_Book?createDatabaseIfNotExist=true
 spring.datasource.username=${UserName}
 spring.datasource.password=${Password}
+
+###### Email Properties ######
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username =durga123q@gmail.com
+spring.mail.password =phzpwmnyyjanveto
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
