Added:: Registration, Verification, Login, Forget_Reset password and CRUD APIs created for UserRegistration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 environment=COMMON
 
 ###### MySQL DB Properties ######
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${URL}/Address_Book?createDatabaseIfNotExist=true
 spring.datasource.username=${UserName}
 spring.datasource.password=${Password}
